@startuml
!theme plain
skinparam linetype ortho

package "Cliente" {
  class MainApp {
    + main()
    - _mostrar_login()
    - _mostrar_principal()
    - _mostrar_sala()
  }
  class ClienteSocket {
    + conectar()
    + enviar()
    + registrar_callback()
  }
  class Pantallas {
    + LoginFrame
    + PantallaPrincipal
    + PantallaSala
    + PanelVideo
  }
  class Gestores {
    + GestorVideo
    + GestorAudio
    + GestorArchivos
  }
}

package "Servidor" {
  class Servidor {
    + iniciar()
    + reenviar_a_sala()
  }
  class ManejadorCliente {
    - socket_cliente
    + procesar_mensajes()
  }
  class BaseDatos {
    + conectar()
    + obtener_conexion()
  }
  class AuthService {
    + validar_login()
  }
}

MainApp --> Pantallas : navega
Pantallas --> ClienteSocket : usa
Pantallas --> Gestores : coordina
Gestores --> ClienteSocket : transmite

Servidor *-- ManejadorCliente : administra
ManejadorCliente --> BaseDatos : consulta
ManejadorCliente --> AuthService : autentica
@enduml